--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 @import url("/fonts/fonts.css");
 :root {
   background-color: rgb(0, 0, 0);
+  user-select: none;
 }
 body{
+    margin: 0;
     display: flex;
     align-items: center;
     width: 100vw;
