--- a/style.css
+++ b/style.css
@@ -1,24 +1,24 @@
-@import url("/fonts/fonts.css");
+@import url("../fonts/fonts.css");
 :root {
   background-color: rgb(0, 0, 0);
   user-select: none;
 }
-body{
-    margin: 0;
-    display: flex;
-    align-items: center;
-    width: 100vw;
-    height: 100vh;
-    justify-content: center;
+body {
+  margin: 0;
+  display: flex;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+  justify-content: center;
 }
-.container{
-    background-color: white;
-    border: 10px solid white;
-    border-radius: 5px;
+.container {
+  background-color: white;
+  border: 10px solid white;
+  border-radius: 5px;
 }
-a{
-    color: #ff8024;
-    text-decoration: none;
+a {
+  color: #ff8024;
+  text-decoration: none;
 }
 .result-con,
 .key {
