--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("../fonts/fonts.css");
+@import url("fonts/fonts.css");
 :root {
   background-color: rgb(0, 0, 0);
   user-select: none;
